alterações na estrutura do código

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="description" content=""/>
-        <title> </title>
-        <link rel="stylesheet" href="styles/style.css" type="text/css"/>
-    </head>
-    <body>
-        <button id="btn">
-            stop interval
-        </button>
-        <div class="big pink">
-        </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="" />
+    <title>Colorful</title>
+    <link rel="stylesheet" href="styles/style.css" type="text/css" />
+  </head>
+  <body>
+    <div style="position: absolute">
+      <button class="btn btn-light" id="btn-stop">Stop Interval</button>
 
-        <script src="script.js"></script>
-    </body>
+      <button id="btn-new">stop interval</button>
+    </div>
+
+    <div id="colorful_figures" style="width: 100vw; height: 100vh"></div>
+
+    <!-- <div class="big pink"></div> -->
+
+    <script src="./js/script.js"></script>
+  </body>
 </html>
